# sbom-quality

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  go.mod  go.sum
.github/workflows/: docker-smoke.yml  release.yml  sbomqs-gate-java.yml  sbomqs-gate-npm.yml  sbomqs-gate-python.yml  sbomqs-gate-rust.yml  sbomqs-gate.yml
cmd/sbom-quality/: main.go
docs/: java.md  npm.md  python.md  rust.md
internal/pipeline/: acquire_test.go  augment.go  augment_test.go  config.go  downconvert.go  downconvert_test.go  enrich.go  generate.go  generate_test.go  merge.go  quality_patch.go  quality_patch_test.go  run.go  run_test.go  validate.go  validate_test.go
scripts/: cdxgen-compat.sh  compare.sh  dogfood.sh  lib.sh  sbomqs-gate-java.sh  sbomqs-gate-npm.sh  sbomqs-gate-python.sh  sbomqs-gate-rust.sh  sbomqs-gate.sh
testdata/fixture-cargo/: Cargo.toml
testdata/fixture-cargo/src/: main.rs
testdata/fixture-gradle/: README.md  build.gradle.kts  settings.gradle.kts
testdata/fixture-gradle/src/main/java/com/example/: App.java
testdata/fixture-maven/: README.md  pom.xml
testdata/fixture-module/: README.md  go.mod  main.go
testdata/fixture-npm/: package-lock.json  package.json
testdata/fixture-npm/src/: index.js
testdata/fixture-python/: README.md  pyproject.toml
testdata/fixture-python-uv/: README.md  pyproject.toml
