[tool.poetry]
name = "sbom-quality-fixture-python"
version = "0.1.0"
description = "Throwaway fixture for the Python BYO --sbom golden gate"
authors = ["sbom-quality CI <ci@example.com>"]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "*"
click = "*"
jinja2 = "*"
rich = "*"
pyyaml = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
